# src/llm_proxy/core/request_type.py
@@ -13,3 +13,4 @@ class RequestType(StrEnum):
     SPEECH = "speech"
     TRANSCRIPTION = "transcription"
     TRANSLATION = "translation"
+    SYSTEMONE = "systemone"
